2007-02-11  David Trowbridge  <trowbrds@gmail.com>

	* src/common/outbound.c:
	* src/common/fe.h:
	* src/fe-gnome/migration.c:
	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/status-bar.c:
	* src/fe-gnome/find-bar.c:
	  - More cleanup.

2007-02-10  David Trowbridge  <trowbrds@gmail.com>

	* src/common/cfgfiles.c:
	* src/fe-gnome/preferences.c:
	* src/fe-gnome/preferences.h:
	  - Use a better download directory.  Bug #363661.

2007-02-10  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/preferences.c:
	  - Tighten things up a bit more.

2007-02-10  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-dcc.c:
	* src/fe-gnome/preferences-page-dcc.h:
	  - Clean up some ugly code.

	* src/fe-gnome/userlist-gui.c:
	  - Make sure to return a value.

2007-02-09  David Trowbridge  <trowbrds@gmail.com>

	* Makefile.am:
	  - Move intltool-* to DISTCLEANFILES.  Bug #406289.

2007-02-08  David Trowbridge  <trowbrds@gmail.com>

	* data/setup-dialog.glade:
	  - Set "activates default" on the last text entry box.  Give the
	    dialog the xchat-gnome icon.  Bug #404793.

2007-02-08  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/preferences.c:
	* src/fe-gnome/preferences.h:
	* src/fe-gnome/main-window.c:
	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/main-window.h:
	* src/fe-gnome/setup-dialog.c:
	  - Change nickname data in the xchat config file only when changed in
	    the GUI, rather than every time the app starts.  Bug #396750.

2007-02-08  David Trowbridge  <trowbrds@gmail.com>

	* plugins/autoaway/autoaway.c:
	  - Remove noisy print messages.  Bug #405847.

2007-02-05  David Trowbridge  <trowbrds@gmail.com>

	* plugins/python/CVS/Entries:
	* plugins/perl/Xchat.pm:
	* plugins/perl/perl.c:
	* plugins/perl/CVS/Entries:
	* src/common/outbound.c:
	* src/common/textenums.h:
	* src/common/dbus/dbus-plugin.c:
	* src/common/dbus/CVS/Entries:
	* src/common/util.c:
	* src/common/proto-irc.c:
	* src/common/xchatc.h:
	* src/common/cfgfiles.c: