@@ -1,3 +1,9 @@
+2007-02-13  David Trowbridge  <trowbrds@gmail.com>
+
+	* src/common/tree.c:
+	* src/common/userlist.c:
+	  - Fix a potential crasher.  Bug #402747.
+
 2007-02-11  David Trowbridge  <trowbrds@gmail.com>
 
 	* src/common/outbound.c:
